--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link th:rel="stylesheet" th:href="@{css/bootstrap.min.css}">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link th:rel="stylesheet" th:href="@{css/mystyle.css}">
+
 
 </head>
 <body>
 <div class="container">
     <div class="jumbotron">
-        <h1 class="display-4" th:text="${greeting}"></h1>
+        <h1 class="display-4 my-font" th:text="${greeting}"></h1>
     </div>
 </div>
 
