--- a/src/main/resources/templates/customer.html
+++ b/src/main/resources/templates/customer.html
@@ -22,7 +22,7 @@
 </form>
 <hr>
 <h1>All Customers</h1>
-
+<p><a th:href="@{/home}">home</a></p>
 <table border="1px">
     <tr><th>Id</th> <th>Name</th></tr>
 
