--- a/src/main/resources/templates/customer.html
+++ b/src/main/resources/templates/customer.html
@@ -10,26 +10,42 @@
 
 <h1>Register Customer</h1>
 <form action="#" th:action="@{/customer}" method="POST">
-    <label for="inputId">Id</label>
-    <input type="input" name="id" id="inputId">
-    <label for="inputName">Name</label>
-    <input type="input" name="name" id="inputName">
+    <div class="form-group">
+        <label for="inputId">Id</label>
+        <input type="input" class="form-control" name="id" id="inputId">
+    </div>
+    <div class="form-group">
+        <label for="inputName">Name</label>
+        <input type="input" class="form-control" name="name" id="inputName">
+    </div>
+    <div class="form-group">
+        <label for="inputPin">Pin</label>
+        <input type="password" class="form-control" name="pin" id="inputPin">
+    </div>
+    <div class="form-group">
+        <input type="submit" class="btn btn-primary">
+    </div>
 
-    <label for="inputPin">Pin</label>
-    <input type="password" name="pin" id="inputPin">
-
-    <input type="submit">
 </form>
 <hr>
 <h1>All Customers</h1>
-<p><a th:href="@{/home}">home</a></p>
-<table border="1px">
-    <tr><th>Id</th> <th>Name</th></tr>
-
+<p><a th:href="@{/home}">H o m e</a></p>
+<table  class="table table-bordered" border="1" >
+    <thead class="thead-dark">
+    <tr>
+        <th>Id</th>
+        <th>Name</th>
+        <th>Pin</th>
+    </tr>
+    </thead>
+    <tbody>
     <tr th:each="customer : ${allCustomers}">
         <td th:text="${customer.id}"></td>
         <td th:text="${customer.name}"></td>
+        <td th:text="${customer.pin}"></td>
     </tr>
+    </tbody>
+
 
 </table>
 
